--- a/.plop/page/page.vue.hbs
+++ b/.plop/page/page.vue.hbs
@@ -1,12 +1,10 @@
 <script>
 export default {
-  name: '{{ pascalCase NAME }}Page'
+  name: '{{ pascalCase NAME }}Page',
 }
 </script>
 <template>
-  <div class="{{ dashCase NAME }}-page">
-    {{ pascalCase NAME }}Page
-  </div>
+  <div class="{{ dashCase NAME }}-page">{{ pascalCase NAME }}Page</div>
 </template>
 <style lang="scss">
 .{{ dashCase NAME }}-page {
