--- a/.plop/component/component.vue.hbs
+++ b/.plop/component/component.vue.hbs
@@ -1,12 +1,10 @@
 <script>
 export default {
-  name: '{{ pascalCase NAME }}'
+  name: '{{ pascalCase NAME }}',
 }
 </script>
 <template>
-  <div class="{{ dashCase NAME }}">
-    {{ pascalCase NAME }}
-  </div>
+  <div class="{{ dashCase NAME }}">{{ pascalCase NAME }}</div>
 </template>
 <style lang="scss">
 .{{ dashCase NAME }} {
